--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
-yoshimi 2.1.0 M
+yoshimi 2.1.1 rc1
 
-2021-10-2 Will
+2021-10-4 Will
+* Updates to User guide
+* Small GUI cleanups
+* Doc and build instruction updates.
+* Set version as 2.1.1 rc1
+
+2021-10-3 Will
 * Further improvements to bank management
   Mostly addtobank() and orphan/duplicate files
 
