--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.1 rc1
 
+2021-10-5 Will
+BugFix: Not resetting part effect number to zero
+  when loading a new instrument or clearing one.
+
 2021-10-4 Will
 * Updates to User guide
 * Small GUI cleanups
