--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.1.1 rc1
+yoshimi 2.1.1 rc2
+
+2021-10-7 Will
+* Created separate button for MIDI CCs in main window
+* Updated user guide
+* Set version as 2.1.1 rc2
 
 2021-10-6 Will
 * Updates in doc and dev_notes
