--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
-yoshimi 2.1.1 rc2
+yoshimi 2.1.1 rc3
+
+2021-10-9 Will
+* Bugfix: Vectors not save to correct locations.
 
 2021-10-7 Will
 * Created separate button for MIDI CCs in main window
