--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 2.1.1 rc3
+yoshimi 2.1.1
+
+2021-10-11 Will
+* Final updates to user guide and docs
+* Set release version to 2.1.1
 
 2021-10-9 Will
 * Bugfix: Vectors not save to correct locations.
