--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.1.1 M
 
+2021-10-16 Will
+* Minor adjustments to VU metering
+* Extra check when loading history lists
+* Doc updates
+
 2021-10-15 Will
 * BugFix: Missing jack midi entry in CmdOptions.cpp
 
