--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.1 M
 
+2021-10-17 Will
+* Reverted VU changes
+
 2021-10-16 Will
 * Minor adjustments to VU metering
 * Extra check when loading history lists
