--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.1 M
 
+2021-10-27 Will
+* BugFix: crash with corrupted history file.
+* added Default_Maths.txt to dev_notes.
+
 2021-10-26 Will
 * Rationalised some PI calculation variations.
 * Added old (commented out) jack MIDI check.
