--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.1 M
 
+2021-11-5 Will
+* Updated user guide.
+
 2021-11-4 Will
 * Loading a state file now always clears the MIDI learn list.
 
