--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 2.1.1 M
 
 2021-11-12 Will
+* BugFix: Crash loading scala keymap file
+
+2021-11-12 Will
 * All Dat2Text engines now independent of numeric positions.
 * Unified control names for MIDI learn.
 
