Dat2Text Oscillator controls now independent of list position

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 2.1.1 M
 2021-11-12 Will
 * BugFix: Crash loading scala keymap file
 
+* Dat2Text Ocsillator controls now independent of list position.
+
 2021-11-12 Will
 * All Dat2Text engines now independent of numeric positions.
 * Unified control names for MIDI learn.
