--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.1 M
 
+2021-11-21 Will
+* More small GUI tweaks.
+
 2021-11-20 Will
 * Added instruments from Hugh across various banks.
 * Updated User Guide
