--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.1 M
 
+2021-11-23 Will
+* Completed unification of padsynth apply status
+
 2021-11-22 Will
 * Bugfix CLI sub and pad stereo set but not read.
 * padsynth applied status now correctly set.
