--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,11 @@
-yoshimi 2.1.1 M
+yoshimi 2.1.2 rc1
 
 2021-11-23 Will
 * Completed unification of padsynth apply status
 * CLI can now read CLI and GUI current status.
+
+* Doc Updates.
+* Set version as 2.1.2 rc1
 
 2021-11-22 Will
 * Bugfix CLI sub and pad stereo set but not read.
