--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 rc1
 
+2021-11-24 Will
+* Improved recognition of Apply Parameters from MIDI
+* doc updates
+
 2021-11-23 Will
 * Completed unification of padsynth apply status
 * CLI can now read CLI and GUI current status.
