--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -18,7 +18,7 @@ Other recent extensions are the ability to import and export entire instrument b
 .PP
 One of the latest additions is the ability to load a list of MIDI-learned settings from the command line at startup.
 .PP
-Recent improvements are key and channel aftertouch, fully resizeable windows, MIDI sync for LFOs and Panning extensions.
+Recent improvements are key and channel aftertouch, fully resizable windows, MIDI sync for LFOs and Panning extensions.
 .PP
 The latest development is the inclusion of MIDI-sync for all LFOs, and all relevant Effects.
 .SH COMMANDS
