--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.2 M
 
+2021-12-6 Will
+* doc corrections.
+
 2021-12-4 Will
 In CMakeLists.txt:
     * added (disabled) option to compile with Clang.
