--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2021-12-7 Will
+* globals AddVoice1 offset is now defined as NUM_VOICES
+* globals AddMod1 offset is now AddVoice1 + NUM_VOICES
+
 2021-12-6 Will
 * doc corrections.
 
