Swapped order of bank and main controls in commandSendReal() Now no sections before commandmain() are relevant to undo
Added comment for suggested undo/redo call location
Made Undo and Redo buttons in main window inactive to aviod confusion
Further work will be done in a new branch

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.1.2 M
 
+2022-1-20 Will
+* Swapped order of bank and main controls in cammdSendReal()
+  also put comment in for suggested undo/redo location.
+* Made Undo and Redo buttons in main inactive to aviod confusion.
+
 2022-1-17 Will
 * Set placeholders for Undo/Redo.
 * Made additional small adjustments to main window.
