Allow for clean reset of InterpolatedValue within effects
This resolves further problems with non-reproducible values in Reverb
(and presumably other effects likewise). Now Effect::cleanup() causes
all InterpolatedValues to be "pushed forward to the target value" immediately,
and thus to start out clean with the currently intended target.

Moreover, under some circumstances InterpolatedValue would not stop interpolation,
but rather continue to interpolate between the same old / new value.
This could happen when interpolationLengh is not divisible by the samples increment;
thus the attempt to make the both advanceValue()-variants mostly symmetrical,
so to have a dedicated end condition check in both variants.

While on that refactoring, a memory leak in EQ was discovered and fixed;
the two AnalogFilter instances in each band are now managed by unique_ptr automatically.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.1.2 M
 
+2022-2-11 Hermann
+* Changes to make Reverb computations completely reproducible
+* Ensure InterpolatedValue stops when passing beyond interpolation-length
+* Allow to forcibly push InterpolatedValue to the next target; used for Effect::cleanup()
+* Fix spurious AnalogFilter recalculations due to float comparison glitches
+
 2022-2-5 Will
 * Added copy of MPE spec to dev_notes.
 * Corrected spelling mistakes here!
