--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.2 M
 
+2022-3-9 Will
+* Corrected envelope info in user guide.
+
 2022-2-15 Will
 * BugFix: CLI not correctly listing part contents.
 
