--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-3-13 Will
+Revised GUI main window
+Updated User Manual
+
 2022-3-10 Will
 Merged in undo branch
 Merged in default BPM from Kristian
