--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.2 M
 
+2022-3-17 Will
+* Can now group undo reset all controllers.
+* Can now group undo resonance set random.
 
 2022-3-16 Will
 * Simplified Undo/Redo
