--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.1.2 M
 
+2022-3-18 Will
+* Reduced undo/redo messaging spam
+* Group undo/redo now in blocks of 16
+  Runs faster without risk of Xruns
+  No change to setting groups.
+
 2022-3-17 Will
 * Can now group undo reset all controllers.
 * Can now group undo resonance set random.
