--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-3-23 Will
+* Envelope points now working correctly.
+  Had to create a special case for this :(
+
 2022-3-19 Will
 * Undo done for SubSynth clear harmonics.
 
