--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,9 @@ yoshimi 2.1.2 M
 * Envelope points now working correctly.
   Had to create a special case for this :(
 
+* Separated add/delete envelope points.
+* add fully correct, delete not quite on undo/redo.
+
 2022-3-19 Will
 * Undo done for SubSynth clear harmonics.
 
