--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-3-25 Will
+* Moved Vector control base channel from insert to paramater.
+  Done to avoid possible centention with real inserts.
+
 2022-3-24 Will
 * Completed undo/redo for envelopes and tidied code.
 * Corrected Xpoint reporting (been wrong for some time).
