--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-3-26 Will
+* Added key based undo/redo patch from Jesper.
+  [Alt]+u, [Alt]+r
+
 2022-3-25 Will
 * Moved Vector control base channel from insert to paramater.
   Done to avoid possible centention with real inserts.
