Moved insert numbers to make space for effects. The idea behind this is that effects should be regarded as inserts. This allows numbering to start from zero (the other inserts don't care) It also makes more sense for the dynfilter-filter insert. Finally, the labeling of effect numbers can then be completed.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.2 M
 
+2022-3-28 Will
+* Moved insert numbers to make space for effects.
+
 2022-3-26 Will
 * Added key based undo/redo patch from Jesper.
   [Alt]+u, [Alt]+r
