--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.1.2 M
 
 2022-3-28 Will
+* Working through effects initially just reading types from the
+  insert labels instead of the kit ones.
+
+2022-3-28 Will
 * Moved insert numbers to make space for effects.
 
 2022-3-26 Will
