--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.1.2 M
 
 2022-3-28 Will
+* Bugfix: Dynfilter not reporting internal filte results to CLI
+  but performing them correcly.
+
+2022-3-28 Will
 * Working through effects initially just reading types from the
   insert labels instead of the kit ones.
 
