--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.2 M
 
+2022-4-1 Will
+* Changed some names to make effect controls clearer
+
 2022-3-31 Will
 * Completed moving effect type identifiers to inserts.
   Actual control still with kit.
