--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,10 @@
 yoshimi 2.1.2 M
 
 2022-4-1 Will
-* Changed some names to make effect controls clearer
+* Changed some names to make effect controls clearer.
+
+* [Ctrl]+z and [Ctrl]+[Shift]+z now undo/redo
+  as well as [Alt]+u, [Alt]+r.
 
 2022-3-31 Will
 * Completed moving effect type identifiers to inserts.
