--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.1.2 M
 
+2022-4-2 Will
+* Added tooltips to Undo/Redo
+* Modified GUI resonance window event handler.
+  It was interfering with Undo/Redo actions.
+* Corrected GUI oscilator window event handler.
+  It was always capturing mouse events.
+
 2022-4-1 Will
 * Changed some names to make effect controls clearer.
 
