Resonance Undo/Redo also tests whether a point has changed.

--- a/Changelog
+++ b/Changelog
@@ -8,6 +8,7 @@ yoshimi 2.1.2 M
   It was always capturing mouse events.
 
 * Refined SubSynth Undo/Redo
+* Refined Resonance Undo/Redo
 
 2022-4-1 Will
 * Changed some names to make effect controls clearer.
