BugFix: filer window becomes slow to respond after many calls. If handling events it seems we need to capture *all* that we generate even if we don't use them. This explains why some of the older ones always return 1, when you'd expecte a zero. This is now done at the 'top' in main, but we should either work out a similar function for LV2, or better, find a way to embed this into MasterUI (has to be a static function).

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-4-7 Will
+bn2108
+* BugFix: filer window becomes slow to respond after many calls.
+
 2022-4-2 Will
 * Added tooltips to Undo/Redo
 * Modified GUI resonance window event handler.
