--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 2.1.2 M
 
-2022-14-7 Will
+2022-4-17 Will
+bn2110
+* Fixed regression (not reporting effect types)
+* Removed invalid class link in MasterMisc
+
+2022-4-14 Will
 bn2109
 * BugFix: previous fix didn't get the root cause.
   Repeated key handler creation.
