Bugfix: unable to cancel envelope freemode.
With the envelope reorganisation in interchange.cpp this control
had been placed such that once in freemode it was no longer visible. Now moved to the start of the envelope code.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-4-20 Will
+bn2112
+* Bugfix: unable to cancel envelope freemode.
+
 2022-4-18 Will
 bn2111
 * Placed copy of Yoshimi_License_History.txt in doc
