Bugfix: Missing random walk exit branch when loading instrument. This was causing the load process to fail silently, but was only really noticable with patchsets as any set with a PadSynth instrument would not load following instruments in higher numbered parts.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-4-23 Will
+bn2116
+* Bugfix: Missing random walk exit branch when loading instrument.
+
 2022-4-22 Will
 bn2115
 * Revised position of new controls in PadSynth window.
