Added undoRedoClear() if deleting a kit line and removed this from overall kit enabling. Deleting a line does remove the objects, but disabling kit mode simply makes these unavailable. While superficially revoking the redo commands, they are still there (provided you don't make any new actions) and will be correctly actioned.
Added warnings to various GUI actions that could disrupt undo/redo
behavoir.
Clearing oscllator harmonics *should* be possible via group undo
(like SubSynth ones) but for some reason I don't yet understand it
locks up :(

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.1.2 M
 
+
+2022-4-24 Will
+bn2120
+* Added undoRedoClear() if deleting a kit line.
+  Removed this from overal kit enabling.
+* Added warnings to various GUI actions that could disrupt undo/redo behavoir.
+
 2022-4-23 Will
 bn2119
 * Adjusted position of Random Walk controls.
