--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.1.2 M
 
+2022-4-26 Will
+bn2121
+* Small GUI cleanups.
+* Updates to Yoshimi Control Numbers.pdf
+* Moved buildpush and incbuildnumber.py out of repository.
 
 2022-4-24 Will
 bn2120
