--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.2 M
 
+2022-4-27 Will
+bn2122
+* BugFix: previous change caused lockup of partUI insert.
+
 2022-4-26 Will
 bn2121
 * Small GUI cleanups.
