Reverted Resonance undo speedup test as it was messing up some graph shapes, especially when most of the region hadn't been altered. The execution speed difference was pretty marginal anyway.
Made a few further small changes to the user guide.

Initial preparations for the release of V 2.2.0. Currently marked as
2.2.0 rc0 - a sort of quasi-rc that we can hold indefintely.
README is not filled in as github always publishes them immediately
(sourceforge doesn't - leaves it to you).

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 2.1.2 M
+yoshimi 2.2.0 rc0
+
+2022-4-28 Will
+bn2123
+* Reverted Resonance undo speedup test - caused odd issues.
+* Further Adjustments to User Guide
+* Initial preparation for Release of V 2.2.0
 
 2022-4-27 Will
 bn2122
