--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -1,4 +1,4 @@
-.TH yoshimi 1 " 2021" "yoshimi 2.1.2.2"
+.TH yoshimi 1 " 2022" "yoshimi 2.2.0"
 .SH NAME
 yoshimi \- a software music synthesiser
 .SH SYNOPSIS
@@ -14,13 +14,13 @@ e.g. Within the 'part' context '? config' will show the commands for configurati
 .PP
 \fBYoshimi\fP has a very extensive MIDI learn capability, exposing the majority of controls. The same MIDI CC and Channel pair can be linked to multiple independent controls. There is also considerable post-learn editing capability.
 .PP
-Other recent extensions are the ability to import and export entire instrument banks in a safe and obvious manner. It is now also possible to swap any instrument or bank with any other, in any bank root without disrupting the rest of the structure.
+Other extensions are the ability to import and export entire instrument banks in a safe and obvious manner. It is now also possible to swap any instrument or bank with any other, in any bank root without disrupting the rest of the structure.
 .PP
-One of the latest additions is the ability to load a list of MIDI-learned settings from the command line at startup.
+Another addition is the ability to load a list of MIDI-learned settings from the command line at startup.
 .PP
-Recent improvements are key and channel aftertouch, fully resizable windows, MIDI sync for LFOs and Panning extensions.
+Recent improvements are key and channel aftertouch, fully resizable windows, MIDI sync for LFOs and Panning extensions. Also,inclusion of MIDI-sync for all LFOs, and all relevant Effects.
 .PP
-The latest development is the inclusion of MIDI-sync for all LFOs, and all relevant Effects.
+The latest development a comprehensive revision of the PadSynth engine, with additional morphing of the wavetables. There is also support for Undo/Redo.
 .SH COMMANDS
 .TP
 .BR \-? ", " \-\-help " Shows command syntax."
