More additions/corrections in dev_notes. Added Theatre Organ to Companion bank. Adjusted User Guide miscellany section.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.0 rc0
 
+2022-4-30 Will
+bn2125
+* More additions/corrections to notes.
+* Added Theature Organ to Companion bank.
+
 2022-4-29 Will
 bn2124
 * GUI main window adjustments.
