--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,13 @@
 yoshimi 2.2.0 rc0
 
 2022-4-30 Will
+bn2126
+* Included Hermans updates to the User Guide
+* Minor adjustments to User Guide and various text files.
+
 bn2125
 * More additions/corrections to notes.
-* Added Theature Organ to Companion bank.
+* Added Theatre Organ to Companion bank.
 
 2022-4-29 Will
 bn2124
