Small adjustments to the presentation of the instrument button in the main window, and adjacent controls.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.0 rc0
 
+2022-5-1 Will
+bn2127
+* Minor tweaks to the main window.
+
 2022-4-30 Will
 bn2126
 * Included Hermans updates to the User Guide
