--- a/Changelog
+++ b/Changelog
@@ -1,12 +1,19 @@
-yoshimi 2.2.0 rc1
+yoshimi 2.2.0 rc2
+
+2022-5-11 Will
+bn2129
+* Applied patch from Hermann for compiling with clang.
+* Changed randWalkWindow_retext() to randRtext()
+* doc updates.
+* Set release candidate 2.2.0 rc2
 
 2022-5-9 Will
 bn2128
-Merged in altmain with adjusted main window.
-BugFix: CLI drum mode control in wrong place.
-Suppressed compiler warning in BuildScheduler.h
-Updated docs and User guide.
-Set release candidate 2.2.0 rc1
+* Merged in altmain with adjusted main window.
+* BugFix: CLI drum mode control in wrong place.
+* Suppressed compiler warning in BuildScheduler.h
+* Updated docs and User guide.
+* Set release candidate 2.2.0 rc1
 
 2022-5-1 Will
 bn2127
