--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,20 @@
-yoshimi 2.2.0
+yoshimi 2.2.0 M
 
+2022-5-18 Will
+bn2133
+* BugFix: Mixer Panel not clearing previous selected part.
+* BugFix: DynFilter filter insert not keeping in scale on resizes.
+* BugFix: Main window not resizing DynFilter filter text.
+* Adjusted some effects control positions.
+
+2022-5-15 Will
+bn2132
 * Final cleanups and adjustments.
 * Commented out cmake testing definitions.
 * Set release version 2.2.0
 
 2022-5-13 Will
-bn2130
+bn2131
 * Corrected some entries in textLists.h
   Adjusted User Guide to match.
 * Set release candidate 2.2.0 rc3
