--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.0 M
 
+2022-5-20 Will
+bn2134
+* Metadata updates.
+
 2022-5-18 Will
 bn2133
 * BugFix: Mixer Panel not clearing previous selected part.
