--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.0 M
 
+2022-5-21 Will
+bn2135
+* BugFix: GUI not updating key shift, key limit, portamento
+  when changing part selection.
+
 2022-5-20 Will
 bn2134
 * Metadata updates.
