--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 2.2.0 M
 
-2023-5-21 Will
+2023-5-24 Will
+bn2137
+* Partially reverted last change in main.cpp.
+
+2023-5-23 Will
 bn2136
 * Small refinements in Main, SynthEngine, MiscGui, LV2.
 
