--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.0 M
 
+2023-6-22 Will
+bn2143
+* Applied Hermann's dynamic symbols patch.
+* Minor HTML guide updates.
+
 2023-6-18 Will
 bn2142
 * Enabled whole part reset for part button and dropdown menu.
