--- a/Changelog
+++ b/Changelog
@@ -1,44 +1,48 @@
 yoshimi 2.2.0 M
 
-2023-6-22 Will
+2022-7-14 Will
+bn2144
+* BugFix: kitmode GUI engines not upodating correctly.
+
+2022-6-22 Will
 bn2143
 * Applied Hermann's dynamic symbols patch.
 * Minor HTML guide updates.
 
-2023-6-18 Will
+2022-6-18 Will
 bn2142
 * Enabled whole part reset for part button and dropdown menu.
   (holding down Ctrl)
 * Updated HTML user guide.
 
-2023-6-17 Will
+2022-6-17 Will
 bn2141
 * Added reset button to part edit window.
   Re-arranged the window's layout to accomode this.
 * Updated User Guide.
 * Changed defaultPart to more accurate defaultInstrument.
 
-2023-6-1 Will
+2022-6-1 Will
 bn2140
 * BugFix: Changed effects not highlighted.
 * Corrected some window title bars.
 * Part kit window and part effects window visible status
   now remembered over Yoshimi shutdown and restart.
 
-2023-5-31 Will
+2022-5-31 Will
 bn2139
 * Merged in part UI improvements from newGUIpart.
 
-2023-5-28 Will
+2022-5-28 Will
 bn2138
 * Moved master/mixer engine updates from partUI to masterUI.
 * Consolidated partnew/updatepart duplicated settings.
 
-2023-5-24 Will
+2022-5-24 Will
 bn2137
 * Partially reverted last change in main.cpp.
 
-2023-5-23 Will
+2022-5-23 Will
 bn2136
 * Small refinements in Main, SynthEngine, MiscGui, LV2.
 
