--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.2.0 M
 
+2022-7-? Will
+bn2145
+* Disabled 'Escape' key if main window has focus.
+* Added Hugh's 'Nostalgia' to Synth bank.
+* Added 'Ride' to Drums bank
+
 2022-7-14 Will
 bn2144
 * BugFix: kitmode GUI engines not upodating correctly.
