--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.1 M
 
+2022-8-12 Will
+bn2148
+* Attempt to improve EQ graph display.
+* Small code cleanus and doc corrections.
+
 2022-8-4 Will
 bn2147
 * Minor GUI updates.
