Re-ordered retry attempts in MusicClient.cpp This is an attempt to prevent the occasional lockup if Yoshimi can't seem to find any audio system at all. It seems to work on my machine.
The entire MusicIO code is very complex and inflexible. It would
probably require a significant - if not complete re-write if other
backends need to be supported.

I believe we need to think in terms of inputs/outputs rather than
Jack/Alsa. This also applies to the UI.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.1 M
 
+2022-8-27 Will
+bn2153
+* Re-ordered retry attempts in MusicClient.cpp to avoid occasional lockups.
+
 2022-8-21 Will
 bn2152
 * Split harmonicPhaseBandwidth label
