--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.2.1
 
+2022-9-26 Will
+bn2157
+* applied temporary fix for wrong EQ graph on loading.
+* added some additional code comments.
+
 2022-9-12 Will
 bn2156
 * Applied riscV64 patch from debian.
