--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.2.2.1
 
+2022-10-22 Will
+bn2159
+* moved down top few control values for MIDI-learn
+* moved partBusy control from part section to top level
+* removed some (now redundant) code
+
 2022-10-15 Will
 bn2158
 * BugFix: System effect dynfilter filter window not resizing text.
