--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.2.1
 
+2023-1-3 Will
+bn2164
+BugFix: When filter type is analog low 1 or high 1, filter Q knob
+was switching to active when changing other filter controls.
+
 2022-11-9 Will
 bn2163
 Reverted default Audio to Jack as workround for pulseaudio issue.
