--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.2.2.1
 
+2023-1-12
+bn 2166
+Brought in latest work from copyPaste branch.
+
 2023-1-7 Will
 bn2165
 Revised formant filter GUI so unused vowels are identified.
