--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.2.2.1
 
+2023-1-26
+bn 2169
+BugFix: LV2 needed UnifiedPresets.h but doesn't use it!
+Finally solved effects window text resize issue.
+Updated User Guide.
+Various doc updates.
+
 2023-1-21
 bn 2168
 Formant filter unused vowel warning now same
