Revised and simpified CLI format filter commands. The help list scans better and its more obvious when in the edit context rather than the main filter one.
CLI now identifes editing an unused vowel by adding a '?' after
the vowel number.

Fixed desktop metainfo error - icon address had spurious digits.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.2.2.1
 
+2023-1-28
+bn 2170
+Revised and simpified CLI format filter commands.
+CLI now identifes editing and unused vowel.
+Fixed desktop metainfo error.
+
 2023-1-26
 bn 2169
 BugFix: LV2 needed UnifiedPresets.h but doesn't use it!
