--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.2.1
 
+2023-1-3 Will
+bn 2174
+Formant filter counters now start at 1 (not zero)
+Improved CLI access the formant filter.
+
 2023-1-1 Will
 bn 2173
 BugFix: MIDI-learn and CLI mixing up EQ filter bands.
