--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.2.3 rc2
+yoshimi 2.2.3 rc3
+
+2020-2-12 Will
+bn 2176
+CLI paste now updates adsynth voice correctly.
+Set version as 2.2.3 rc3
 
 2023-2-11 Will
 bn 2176
