Fix various source comment typos

--- a/desktop/yoshimi.1
+++ b/desktop/yoshimi.1
@@ -59,7 +59,7 @@ Attempting 'c' and 'i' will produce a warning, and although it is possible to ru
 .TP
 .BR \-N ", " \-\-name-tag=<tag> " Add a tag to the client name."
 .TP
-.BR \-o ", " \-\-oscilsize=<size> " Set the AddSynth oscillater size."
+.BR \-o ", " \-\-oscilsize=<size> " Set the AddSynth oscillator size."
 .TP
 .BR \-R ", " \-\-samplerate=<rate> " Set the ALSA audio sample rate."
 .TP
