All 'normal' text theme done. Menu and counter arrows match text (not spinners). Also most graph colours.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.2.3 M
 
+2023-3-8 Will
+bn 2183
+All 'normal' text theme done.
+Also most graph colours.
+
 2023-3-6 Will
 bn 2182
 'classic' theme now run directly in Master and only saved
