Themes can now now be manually changed by copying and editing the 'classic' theme in: /home/will/.local/share/yoshimi/themes
Then changing the last entry in:
.config/yoshimi/yoshimi.config

This is very much a moving target so each time 'master' is fetched
the demo 'classic' file should be deleted so it will be updated and
the new entries copied into any alternative themes.

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,14 @@
 yoshimi 2.2.3 M
 
 2023-3-8 Will
+bn 2184
+Themes can now now be manually changed by copyiong and editing
+the 'classic' theme in:
+/home/will/.local/share/yoshimi/themes
+
+Then changing the last entry in:
+.config/yoshimi/yoshimi.config
+
 bn 2183
 All 'normal' text theme done.
 Also most graph colours.
